crates/turborepo/tests/snapshots/command_test__bad_flag_implied_run.snap
---
source: crates/turborepo/tests/command_test.rs
expression: stderr.to_string()
---
 ERROR  unexpected argument '--bad-flag' found

Usage: turbo run [FLAGS]

For more information, try '--help'.
