crates/turborepo/tests/snapshots/command_test__bad_flag_top_level.snap
---
source: crates/turborepo/tests/command_test.rs
expression: stderr.to_string()
---
 ERROR  unexpected argument '--bad-flag' found

Usage: turbo [FLAGS] <SUBCOMMAND>

For more information, try '--help'.
